# mini_app

./: .env.example  .gitignore  Dockerfile  README.md  build_and_run.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
actions/: private-action.yml
mini_app/: __init__.py  config.py  main.py  models.py  settings.py
